[project]
name = "spotify-friends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.17",
    "ipykernel>=7.1.0",
    "ipysigma>=0.24.5",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "nx-parallel>=0.4",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "pyvis>=0.3.2",
    "requests>=2.32.5",
    "rustworkx>=0.17.1",
    "scipy>=1.16.3",
    "scrapy>=2.13.4",
    "scrapy-playwright>=0.0.44",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
